@@ -376,6 +376,14 @@ static void stopProc(void *p)
 } 
   
 
+static void handleSigPipe(int sig) 
+{
+   // Got a sigpipe, but we don't want to do anything about it because it could
+   // cause the provider to unload improperly.
+   mlogf(M_ERROR,M_SHOW, "-#- %s - %d provider received a SIGPIPE signal, ignoring\n",
+           processName, currentProc);
+}
+
 static void handleSigSegv(int sig) 
 {
    Parms *threads=activeThreadsFirst;
@@ -725,6 +733,7 @@ static int getProcess(ProviderInfo * info, ProviderProcess ** proc)
             setSignal(SIGCHLD, SIG_DFL,0);
             setSignal(SIGTERM, SIG_IGN,0);
             setSignal(SIGHUP, SIG_IGN,0);
+            setSignal(SIGPIPE, handleSigPipe,0);
             setSignal(SIGUSR1, handleSigUsr1,0);
             
             setSignal(SIGSEGV, handleSigSegv,SA_ONESHOT);
