@@ -17,6 +17,7 @@ Bugs fixed:
 - 3422650 Associators calls to IndicationService depends on cmpi-base
 - 3428806 type=null in authorizeFilter call
 - 3419721 reset CMPIValue buffer in str2CMPIValue
+- 3478930 Handle SIGPIPE in providerMgr
 
 Changes in 1.3.13
 =================
