@@ -1,3 +1,8 @@
+2012-01-25 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
+
+	* providerMgr.c
+	[ 3478930 ] Handle SIGPIPE in providerMgr
+
 2011-12-11 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
 
 	* test/xmltest/SAE*
